# ResumeBuilder

./: .gitignore  Makefile  README.md  file_list  find_files.py  package-lock.json
app/resume-builder/: package-lock.json  package.json
app/resume-builder/src/app/: page.tsx
back/: Dockerfile  setup.cfg
back/builder/: education.py  my_resume.py  project.py  resume.py  utils.py  work_experience.py
back/lambdas/: create_pdf.py  lambda_function.py
back/lib/: resume.aux  resume.out  resume.tex
back/scripts/: find_files.py
back/src/: setup.cfg
back/src/builder/: education.py  main.py  my_resume.py  project.py  resume.py  work_experience.py
back/src/lib/: latex_template
back/src/test/: test_resume.py
back/test/: test_lambdas.py  test_resume.py
back/tlsb-gui-installer/texmf-dist/: ls-R
builder/: contacts.py  education.py  main.py  my_resume.py  project.py  resume.py  work_experience.py
front/: package-lock.json  package.json
front/.next/: app-build-manifest.json  trace
front/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
front/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
front/.next/server/pages/: _error.js
front/.next/server/vendor-chunks/: @babel.js  @clerk.js  @emotion.js  @mui.js  @peculiar.js  @swc.js  asn1js.js  clsx.js  cookie.js  (+23 more)
front/src/app/: layout.tsx  page.tsx
test/: test_resume.py
(+176 files in other folders)
