[metadata]
name = ResumeBuilder
version = 0.1.0

[options]
packages = find:
install_requires =

[options.extras_require]
dev = 
    flake8
    black
    boto3
# boto3 needed for create_pdf, and installs separately when deploying,
# only listed in dev for pylance

[options.package_data]
builder = latex_template
